--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,29 +1,19 @@
 <!DOCTYPE html>
-<!--
-  Original Design: Spectral by HTML5 UP
-    html5up.net | @n33co
-    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-  Jekyll build mod
--->
-<html>
-
+<html lang="en">
   {% include head.html %}
 
-  <body>
+<body>
+  {% include header.html %}
+  
+  {{ content }}
 
-    <!-- Page Wrapper -->
-    <div id="page-wrapper">
+  {% include footer.html%}
 
-      {% include header.html %}
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script src="http://netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+  <!--<script src="{{ "/assets/js/prism.js" | prepend: site.baseurl }}"></script> -->
+  <script src="{{ "/assets/js/site.js" | prepend: site.baseurl }}"></script>
 
-      {{ content }}
-
-      {% include footer.html %}
-
-      {% include scripts.html %}
-
-    </div>
-
-  </body>
+</body>
 
 </html>
