--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,17 +1,28 @@
 ---
 layout: default
 ---
-<article id="main">
 
-  <header>
-    <h2>{{ page.title }}</h2>
-    <p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
-  </header>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
+      <div class="page">
 
-  <section class="wrapper style5">
-    <div class="inner">
-      {{ content }}
+        <header class="page-header">
+          <h1 class="page-title">{{ page.title }}</h1>
+          {% if page.subtitle %}
+            <h5 class="page-subtitle"> {{ page.subtitle }} </h5>
+          {% endif %}
+          <small> <i class="fa fa-calendar"></i>
+            <time>
+              {{ page.date | date:'%A, %B %d, %Y'}}
+            </time>
+          </small>
+        </header>
+
+        <article class="page-content">
+          {{ content }}
+        </article>
+      </div>
     </div>
-  </section>
-
-</article>
+  </div>
+</div>
