--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,15 +1,11 @@
-
-
-<footer class="footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-offset-3 col-lg-6">
-            <div class="row">
-              <div class="col-xs-12 text-center">
-                <small>&copy; rifyll theme, 2014</small>
-              </div>
-            </div>
+<!-- Footer -->
+    <section id="footer">
+        <div class="container">
+            <ul class="copyright">
+                <li>&copy; Untitled. All rights reserved.</li>
+                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                <li>Demo Images: <a href="https://unsplash.com/">Unsplash</a></li>
+                <li>Jekyll Template: <a href="http://cloudcannon.com">Cloud Cannon</a></li>
+            </ul>
         </div>
-      </div>
-    </div>
-  </footer>
+    </section>
