--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,14 +1,21 @@
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description"
-    content="{{page.title}} {{page.excerpt | strip_html}} {{ site.description }}">
-  <title>{% if page.title %} {{ page.title }} - {{ site.title }} {% else %} {{ site.title }} {% endif %}</title>
 
-  <!-- stylesheets -->
-  <link media="all" href="http://netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-  <link media="all" href="http://netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-  <link media="all" rel="stylesheet" href="{{ "/assets/css/site.css" | prepend: site.baseurl }}">
-
-</head>
+	<head>
+		<title>Read Only by HTML5 UP</title>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="description" content="" />
+		<meta name="keywords" content="" />
+		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+		<script src="{{ site.baseurl }}/js/jquery.min.js"></script>
+		<script src="{{ site.baseurl }}/js/jquery.scrollzer.min.js"></script>
+		<script src="{{ site.baseurl }}/js/jquery.scrolly.min.js"></script>
+		<script src="{{ site.baseurl }}/js/skel.min.js"></script>
+		<script src="{{ site.baseurl }}/js/skel-layers.min.js"></script>
+		<script src="{{ site.baseurl }}/js/init.js"></script>
+		<noscript>
+			<link rel="stylesheet" href="{{ site.baseurl }}/css/skel.css" />
+			<link rel="stylesheet" href="{{ site.baseurl }}/css/style.css" />
+			<link rel="stylesheet" href="{{ site.baseurl }}/css/style-xlarge.css" />
+		</noscript>
+		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+	</head>
+		
