--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,34 +1,26 @@
-<header>
-  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a id="site-title" class="navbar-brand" href="{{ "/" | prepend: site.baseurl }}">
-          <img class="pull-left img-responsive" src="{{site.logo_location}}"> 
-          <span class="name-holder">{{ site.title }}</span>
-        </a>
-      </div>
+<!-- Header -->
+    <section id="header" class="skel-layers-fixed">
+        <header>
+            <span class="image avatar"><img src="{{ site.baseurl }}/images/avatar.jpg" alt="" /></span>
+            <h1 id="logo"><a href="{{ site.baseurl }}/">Willis Corto</a></h1>
+            <p>I got reprogrammed by a rogue AI<br />
+            and now I'm totally cray</p>
+        </header>
+        <nav id="nav">
+            <ul>
+                <li><a href="{{ site.baseurl }}/">Home</a></li>
+                <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
+                <li><a href="{{ site.baseurl }}/blog">Blog</a></li>
+            </ul>
+        </nav>
+        <footer>
+            <ul class="icons">
+                <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+                <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+                <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+                <li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+                <li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+            </ul>
+        </footer>
+    </section>
 
-      <div class="collapse navbar-collapse" id="navbar">
-
-        <ul id="main-menu" class="nav navbar-nav navbar-right">
-
-          {% for menuItem in site.data.menu.mainmenu %}
-            <li><a href="{{ menuItem[1].url | prepend: site.baseurl }}">
-              <i class="fa {{menuItem[1].icon_class}}"></i> {{menuItem[1].text}}</a>
-            </li>
-          {% endfor %}
-
-        </ul>
-      </div>
-      <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container-fluid -->
-  </nav>
-
-</header>
