--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-  {% include head.html %}
+<!DOCTYPE HTML>
+<!--
+	Read Only by HTML5 UP
+	html5up.net | @n33co
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+    {% include /head.html %}
+    <body>
+        <div id="wrapper">
+        {% include /header.html %}
 
-<body>
-  {% include header.html %}
-  
-  {{ content }}
+            <!-- Main -->
+            <div id="main">
+                {{ content }}
 
-  {% include footer.html%}
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script src="http://netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-  <!--<script src="{{ "/assets/js/prism.js" | prepend: site.baseurl }}"></script> -->
-  <script src="{{ "/assets/js/site.js" | prepend: site.baseurl }}"></script>
-
-</body>
-
+            </div>
+            {% include /footer.html %}
+		</div>
+	</body>
 </html>
