--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -5,7 +5,7 @@
 	// Change this to 'left' to move the header sidebar to the left-hand side
 	// of the viewport. Note that if you do this, be sure to also change
 	// sidePanel's 'side' in js/init.js.
-	$side-header:				'right';
+	$side-header:				'left';
 
 // Size.
 	$size-border-radius:		5px;
